--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -271,7 +271,7 @@
         <div class="row new-container">
 
             <div class="row "> 
-            <div class="pull-right new-list"> <a href=""> Models Online</a>  <a href="" data-toggle="modal" data-target="#myModalHorizontal"><i class="fa fa-wrench" aria-hidden="true"></i>Settings</a>  <a href=""> Showing 1-38</a> <input type="text" placeholder="Search">  <a href=""> New Models</a>  <a href=""> Previews</a>
+            <div class="pull-right new-list"> <a href=""> Helpers Online</a>  <a href="" data-toggle="modal" data-target="#myModalHorizontal"><i class="fa fa-wrench" aria-hidden="true"></i>Settings</a>  <a href=""> Showing 1-38</a> <input type="text" placeholder="Search">  <a href=""> New Helper</a>  <a href=""> Previews</a>
                 <a href=""> Pause</a> <a href=""><i class="fa fa-refresh" aria-hidden="true"></i></a></div>    
 
             </div>
